[package]
name = "lc"
version = "0.2.0"
authors = ["M Parker <mparker17@users.noreply.github.com>"]

publish = false

edition = "2018"

description = """
The lc (which stands for "letter count") utility displays the number of
instances of each letter contained in each input file, or standard input (if no
file is specified) to the standard output. Newline characters are not counted.
"""
homepage = "https://github.com/mparker17/lc"
repository = "https://github.com/mparker17/lc"
readme = "README.md"
keywords = ["letter", "grapheme", "counting", "wc"]
categories = ["command-line-utilities", "text-processing"]
license = "GPL-2.0"

[badges]
travis-ci = { repository = "mparker17/lc", branch = "master" }

[dependencies]
unicode-segmentation = "^1.2.1"
clap = "^2.32.0"
